css file is now working

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <style src="style.css"></style>
+    <link rel="stylesheet" href="style.css">
     <h1>SOI</h1>
 </body>
 </html>
