updated the header

--- a/week 1 day 3 project/index.html
+++ b/week 1 day 3 project/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NEW SCIENTIST</title>
+    <link rel="stylesheet" href="NewYork.css">
 </head>
 <body>
     <header>
         <div class="header-first-line">
-            <div>New Scientic</div>
-            <div>sign in</div>
-            <div>search bar</div>
-            <div>theme</div>
+            <div class="new-scientic">New Scientic</div>
+            <div class="sign-in">sign in</div>
+            <div class="search-bar">search bar</div>
+            <div class="theme">theme</div>
             <div>
                 <div>
                     <a>Event</a>
@@ -22,7 +23,9 @@
                 </div>
             </div>
         </div>
-        <div class="Explore-section">
+        <div class="three-header">
+            <div class="section-topic">
+                <div class="explore-section">
             <a>News</a>
             <a>Features</a>
             <a>Newsletters</a>
@@ -31,6 +34,23 @@
             <a>comment</a>
             <a>culture</a>
             <a>crosswords</a>
+                </div>
+                <div class="explore-topic">
+            <a>health</a>
+            <a>space</a>
+            <a>physics</a>
+            <a>technology</a>
+            <a>environment</a>
+            <a>mind</a>
+            <a>human</a>
+            <a>life</a>
+            <a>mathematics</a>
+            <a>chemistry</a>
+            <a>earth</a>
+            <a>society</a>
+                </div>
+            </div>    
+            <div class="subscribe-button">subscribe now</div>
         </div>
     </header>
 </body>
