started building the main body of the page, also added a picture

--- a/week 1 day 3 project/index.html
+++ b/week 1 day 3 project/index.html
@@ -53,5 +53,19 @@
             <div class="subscribe-button">subscribe now</div>
         </div>
     </header>
+    <div class="main-body">
+        <h6>space</h6>
+        <h1>Ancient lake in mars's gale crater may have actually been a small pond</h1>
+        <div>By <a href="#">Leah Crane</a></div>
+        <div>6 august 2021</div>
+        <div>
+            <div>facebook</div>
+            <div>twitter</div>
+            <div>linked in</div>
+            <div>reddit</div>
+            <div>email</div>
+            <div>print</div>
+        </div>
+    </div>
 </body>
 </html>
