--- a/week 1 day 3 project/index.html
+++ b/week 1 day 3 project/index.html
@@ -66,6 +66,61 @@
             <div>email</div>
             <div>print</div>
         </div>
+        <img src="mars.jpeg" alt="a picture of mars">
+        <p>the rocks inside gale crater hint there may not have been a large lake there after all</p>
+        <p>A purported ancient lake on Mars may have been far smaller
+         than researchers thought. NASA’s Curiosity rover has been 
+         exploring Gale crater for more than eight years, and while early 
+         observations suggested the entire crater may once have been filled
+         with water, a new analysis implies that it just had a series of 
+         ponds instead.
+        </p>     
+
+        <p>Previous analyses of data from Curiosity have relied heavily 
+            on a measure called the chemical index of alteration to determine 
+            how rocks were weathered over time. Joseph Michalski at the 
+            University of Hong Kong and his colleagues have suggested that 
+            because this measure was developed for use on Earth, it may not be 
+            valid in the extreme Martian climate.
+        </p>    
+            
+        <p>Instead, they analysed the concentrations of various compounds 
+            that are expected to change based on different types of weathering 
+            over time. They found that some of the layers of rock Curiosity 
+            examined did interact with water at some point in their past, 
+            but more are likely to have formed outside of the water.
+        </p>    
     </div>
+    <div class="second-body">
+        <h2>more from new-scientic</h2>
+        <p>exploe the latest news, articles and features</p>
+        <div class="the-four-divs">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    <div class="third-body">
+        <div class="third-body-head">
+            <h3>popular articles</h3>
+            <p>trending new scientis articles</p>
+        </div>
+        <div class="the-ten-section">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    <footer>
+        
+    </footer>
 </body>
 </html>
