--- a/week 1 day 3 project/index.html
+++ b/week 1 day 3 project/index.html
@@ -69,7 +69,7 @@
         <img src="mars.jpeg" alt="a picture of mars">
         <p>the rocks inside gale crater hint there may not have been a large lake there after all</p>
         <p>A purported ancient lake on Mars may have been far smaller
-         than researchers thought. NASA’s Curiosity rover has been 
+         than researchers thought. NASA's Curiosity rover has been 
          exploring Gale crater for more than eight years, and while early 
          observations suggested the entire crater may once have been filled
          with water, a new analysis implies that it just had a series of 
@@ -120,7 +120,52 @@
         </div>
     </div>
     <footer>
-        
+        <div class="footer-body">
+            <div class="download">
+                <p>Download the app</p>
+                <a>ios store</a>
+                <a>google play store</a>
+            </div>
+            <div class="social">
+                <p>find us on social media</p>
+                <a>instagram</a>
+                <a>facebook</a>
+                <a>twitter</a>
+                <a>tiktok</a>
+                <a>linked in</a>
+            </div>
+            <div class="subscribe">
+                <P>subscription</P>
+                <a>subscriber benefit</a>
+                <a>gift</a>
+                <a>students & graduate</a>
+                <a>eduacational</a>
+                <a>corporate</a>
+            </div>
+            <div class="support">
+                <p>support</p>
+                <a>help</a>
+                <a>about us</a>
+                <a>advertise</a>
+                <a>write for us</a>
+            </div>
+            <div class="tools">
+                <p>tools</p>
+                <a>Events</a>
+                <a>science jobs</a>
+                <a>colab</a>
+                <a>syndication</a>
+                <a>rss feeds</a>
+            </div>
+            <div class="legal-and-privacy">
+                <p>legal and privacy</p>
+                <a>contact us</a>
+                <a>privacy poilcy</a>
+                <a>cookie poilcy</a>
+                <a>terms & condition</a>
+                <a>cookie settings</a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
