began styling the header with css

--- a/week 1 day 3 project/index.html
+++ b/week 1 day 3 project/index.html
@@ -9,45 +9,43 @@
 <body>
     <header>
         <div class="header-first-line">
-            <div class="new-scientic">New Scientic</div>
+            <div class="new-scientic">New Scientist</div>
             <div class="sign-in">sign in</div>
             <div class="search-bar">search bar</div>
-            <div class="theme">theme</div>
-            <div>
-                <div>
-                    <a>Event</a>
-                    <a>Tours</a>
-                    <a>Shop</a>
-                    <a>Courses</a>
-                    <a>Jobs</a>
-                </div>
+            <div class="theme">theme</div>            
+            <div class="the-bar">
+                <a>Event</a>
+                <a>Tours</a>
+                <a>Shop</a>
+                <a>Courses</a>
+                <a>Jobs</a>
             </div>
         </div>
         <div class="three-header">
             <div class="section-topic">
                 <div class="explore-section">
-            <a>News</a>
-            <a>Features</a>
-            <a>Newsletters</a>
-            <a>Podcast</a>
-            <a>video</a>
-            <a>comment</a>
-            <a>culture</a>
-            <a>crosswords</a>
+                    <a>News</a>
+                    <a>Features</a>
+                    <a>Newsletters</a>
+                    <a>Podcast</a>
+                    <a>video</a>
+                    <a>comment</a>
+                    <a>culture</a>
+                    <a>crosswords</a>
                 </div>
                 <div class="explore-topic">
-            <a>health</a>
-            <a>space</a>
-            <a>physics</a>
-            <a>technology</a>
-            <a>environment</a>
-            <a>mind</a>
-            <a>human</a>
-            <a>life</a>
-            <a>mathematics</a>
-            <a>chemistry</a>
-            <a>earth</a>
-            <a>society</a>
+                    <a>health</a>
+                    <a>space</a>
+                    <a>physics</a>
+                    <a>technology</a>
+                    <a>environment</a>
+                    <a>mind</a>
+                    <a>human</a>
+                    <a>life</a>
+                    <a>mathematics</a>
+                    <a>chemistry</a>
+                    <a>earth</a>
+                    <a>society</a>
                 </div>
             </div>    
             <div class="subscribe-button">subscribe now</div>
@@ -58,7 +56,7 @@
         <h1>Ancient lake in mars's gale crater may have actually been a small pond</h1>
         <div>By <a href="#">Leah Crane</a></div>
         <div>6 august 2021</div>
-        <div>
+        <div class="plug-ins">
             <div>facebook</div>
             <div>twitter</div>
             <div>linked in</div>
