--- a/week 1 day 3 project/index.html
+++ b/week 1 day 3 project/index.html
@@ -53,9 +53,9 @@
     </header>
     <div class="main-body">
         <h6>space</h6>
-        <h1>Ancient lake in mars's gale crater may have actually been a small pond</h1>
-        <div>By <a href="#">Leah Crane</a></div>
-        <div>6 august 2021</div>
+        <h1 class="main-body-header">Ancient lake in mars's gale crater may have actually been a small pond</h1>
+        <div class="the-link">By <a href="#">Leah Crane</a></div>
+        <div class="date">6 august 2021</div>
         <div class="plug-ins">
             <div>facebook</div>
             <div>twitter</div>
